--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ egui_plot = "0.33.0"
 chrono = "0.4.41"
 rfd = "0.15.4"
 image = "0.25.8"
+serde = { version = "1.0", features = ["derive"] }
 rustfft = { version = "6", optional = true }
 tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "sync"], optional = true }
 tonic = { version = "0.12", features = ["tls", "transport"], optional = true }
