--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,10 @@ parquet = [
     "dep:arrow-schema",
     "dep:parquet",
 ]
+# Optional helper for example to query monitor geometry for sizing/positioning
+window_control_display_info = [
+	"dep:display-info",
+]
 
 [dependencies]
 eframe = "0.32.2"
@@ -52,6 +56,7 @@ futures-core = { version = "0.3", optional = true }
 arrow-array = { version = "52", optional = true }
 arrow-schema = { version = "52", optional = true }
 parquet = { version = "52", optional = true, features = ["arrow"] }
+display-info = { version = "0.5", optional = true }
 
 [build-dependencies]
 tonic-build = "0.12"
@@ -74,3 +79,8 @@ path = "examples/sine.rs"
 name = "sine_cosine_delayed_snapshot"
 path = "examples/sine_cosine_delayed_snapshot.rs"
 required-features = ["parquet"]
+
+[[example]]
+name = "window_control"
+path = "examples/window_control.rs"
+required-features = []
