--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ chrono = "0.4.41"
 rfd = "0.15.4"
 image = "0.25.8"
 serde = { version = "1.0", features = ["derive"] }
+egui_table = "0.4"
 rustfft = { version = "6", optional = true }
 tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "sync"], optional = true }
 tonic = { version = "0.12", features = ["tls", "transport"], optional = true }
