Add optional info field to MultiSample for enhanced trace metadata and UI display

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ path = "src/lib.rs"
 
 [features]
 default = []
+# Opt-in tracing for traces table width debugging (silenced by default)
+traces_table_debug = []
 # Enable building gRPC examples and proto codegen
 grpc = [
 	"dep:tokio",
