--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
             libx11-dev libxcb1-dev libx11-xcb-dev \
             libxi-dev libxtst-dev libxrandr-dev libxinerama-dev \
             libxkbcommon-dev libwayland-dev \
-            libgl1-mesa-dev libegl1-mesa
+            libgl1-mesa-dev libegl1-mesa-dev
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
@@ -56,7 +56,7 @@ jobs:
             libx11-dev libxcb1-dev libx11-xcb-dev \
             libxi-dev libxtst-dev libxrandr-dev libxinerama-dev \
             libxkbcommon-dev libwayland-dev \
-            libgl1-mesa-dev libegl1-mesa
+            libgl1-mesa-dev libegl1-mesa-dev
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
