--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,39 +10,9 @@ permissions:
   contents: read
 
 jobs:
-  quick-check:
-    name: Quick cargo check
+  cargo-check:
+    name: cargo check
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update -qq
-          sudo apt-get install -y --no-install-recommends \
-            pkg-config build-essential ca-certificates \
-            libx11-dev libxcb1-dev libx11-xcb-dev \
-            libxi-dev libxtst-dev libxrandr-dev libxinerama-dev \
-            libxkbcommon-dev libwayland-dev \
-            libgl1-mesa-dev libegl1-mesa-dev
-
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Cache cargo
-        uses: Swatinem/rust-cache@v2
-        with:
-          workspaces: |
-            . -> target
-
-      - name: cargo check
-        run: cargo check
-
-  examples-check:
-    name: Check all examples
-    runs-on: ubuntu-latest
-    needs: quick-check
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -67,14 +37,5 @@ jobs:
           workspaces: |
             . -> target
 
-      - name: cargo check --examples (no features)
+      - name: cargo check --examples
         run: cargo check --examples
-
-      - name: cargo check --examples --features grpc
-        run: cargo check --examples --features grpc
-
-      - name: cargo check --examples --features parquet
-        run: cargo check --examples --features parquet
-
-      - name: cargo check --examples --features window_control_display_info
-        run: cargo check --examples --features window_control_display_info
