--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ rfd = "0.15"
 image = "0.25"
 serde = { version = "1.0", features = ["derive"] }
 egui_table = "0.5"
+serde_yaml = "0.9"
 rustfft = { version = "6", optional = true }
 tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "sync"], optional = true }
 tonic = { version = "0.12", features = ["tls", "transport"], optional = true }
