--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ chrono = "0.4.41"
 rfd = "0.15.4"
 image = "0.25.8"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 egui_table = "0.4"
 rustfft = { version = "6", optional = true }
 tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "sync"], optional = true }
