--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,9 @@ egui_plot = "0.34.0"
 chrono = "0.4.41"
 rfd = "0.15.4"
 image = "0.25.8"
+usvg = "0.43"
+resvg = "0.43"
+tiny-skia = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 egui_table = "0.5"
