--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ arrow-array = { version = "52", optional = true }
 arrow-schema = { version = "52", optional = true }
 parquet = { version = "52", optional = true, features = ["arrow"] }
 display-info = { version = "0.5", optional = true }
+downcast-rs = "1.2"
 
 [build-dependencies]
 tonic-build = "0.12"
