Update more packages and fix feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ egui_table = "0.5"
 serde_yaml = "0.9"
 rustfft = { version = "6", optional = true }
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"], optional = true }
-tonic = { version = "0.14", features = ["tls", "transport"], optional = true }
+tonic = { version = "0.14", features = ["transport"], optional = true }
 prost = { version = "0.14", optional = true }
 prost-types = { version = "0.14", optional = true }
 async-stream = { version = "0.3", optional = true }
