--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,8 +53,13 @@ chrono = "0.4"
 rfd = "0.16"
 image = "0.25"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 egui_table = "0.5"
 serde_yaml = "0.9"
+downcast-rs = "2"
+usvg = "0.45"
+resvg = "0.45"
+tiny-skia = "0.11"
 rustfft = { version = "6", optional = true }
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"], optional = true }
 tonic = { version = "0.14", features = ["transport"], optional = true }
