Refactor data handling in UI panels to use updated data structures
- Updated MathPanel to reference traces directly instead of scope_data.
- Modified MeasurementPanel to iterate over scope data correctly and handle clicked points.
- Enhanced ScopePanel to manage scope names and IDs more effectively.
- Improved TriggersPanel to utilize the new data structure for hover traces and trigger management.
- Refactored ThresholdsPanel to access drawn points based on the primary scope.
- Adjusted TracesPanel to support drag-and-drop functionality for trace assignments across scopes.
- General cleanup and optimization of UI rendering logic across panels.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ name = "liveplot"
 path = "src/lib.rs"
 
 [features]
-default = []
+default = ["tiles"]
 # Opt-in tracing for traces table width debugging (silenced by default)
 traces_table_debug = []
 # Enable building gRPC examples and proto codegen
@@ -49,6 +49,7 @@ eframe = "0.33"
 egui = "0.33"
 egui_plot = "0.34"
 egui_tiles = { version = "0.14", optional = true }
+egui_dnd = "0.14"
 chrono = "0.4"
 rfd = "0.16"
 image = "0.25"
