feat: add highlight option for newest point in trace look editor
- Introduced a checkbox in the trace look editor to highlight the newest point with a larger marker.
- Updated the TraceLook struct and its serialization to include the new highlight option.
- Refactored the traces panel to accommodate changes in scope settings and trace assignments.
- Enhanced the scope settings UI to manage trace assignments more effectively, including drag-and-drop functionality.
- Improved the rendering of XY pairs and their associated trace looks in the scope settings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,4 +89,7 @@
         "cfenv": "cpp"
     },
     "rust-analyzer.initializeStopped": true,
+    "chat.tools.terminal.autoApprove": {
+        "cargo fmt": true
+    },
 }
