--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,6 +74,7 @@ arrow-schema = { version = "57", optional = true }
 parquet = { version = "57", optional = true, features = ["arrow"] }
 display-info = { version = "0.5", optional = true }
 egui-phosphor = "0.11"
+once_cell = "1.21.3"
 
 [build-dependencies]
 tonic-prost-build = "0.14"
@@ -114,8 +115,8 @@ name = "thresholds_sine"
 path = "examples/thresholds_sine.rs"
 
 [[example]]
-name = "custom_colors"
-path = "examples/custom_colors.rs"
+name = "custom_trace_colors"
+path = "examples/custom_trace_colors.rs"
 
 [[example]]
 name = "embedded_window"
