Enhance CI configuration and examples; add feature flags demo
- Updated CI jobs to include checks for default, no optional, and all features.
- Added new example for demonstrating feature flags.
- Introduced `pause_on_click` functionality in ScopeData and related UI components.
- Improved README with usage instructions for new features.
- Added tests for `pause_on_click` functionality and persistence.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,5 +37,11 @@ jobs:
           workspaces: |
             . -> target
 
-      - name: cargo check --examples
+      - name: cargo check (default features)
         run: cargo check --examples
+
+      - name: cargo check (no optional features)
+        run: cargo check --no-default-features --features tiles --examples
+
+      - name: cargo check (all features)
+        run: cargo check --all-features --examples
